--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-tab-view": "^3.1.1",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.0"   
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
