--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon app.js", 
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -12,5 +13,8 @@
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "mongoose": "^6.6.2"
+  },
+  "devDependencies": {  
+    "nodemon": "^2.0.20"
   }
 }
