--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "link": "^1.5.1",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-native": "^0.69.6",
+    "react-native": "0.69.6",
     "react-native-checkbox": "^2.0.0",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-restart": "^0.0.24",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-segmented-control-tab": "^4.0.0",
     "react-native-svg": "12.3.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-tab-view": "^3.1.1",
