--- a/package.json
+++ b/package.json
@@ -1,20 +1,19 @@
 {
   "name": "flashcardmaster",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.0",
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-community/google-signin": "^5.0.0",
-    "@react-native-google-signin/google-signin": "^8.0.1",
     "@react-native-firebase/app": "^15.7.0",
     "@react-native-firebase/dynamic-links": "^15.7.0",
+    "@react-native-google-signin/google-signin": "^8.0.1",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
@@ -22,9 +21,15 @@
     "eas-cli": "^2.4.1",
     "expo": "~46.0.13",
     "expo-auth-session": "^3.7.1",
+    "expo-dev-client": "^1.3.1",
     "expo-google-sign-in": "^11.0.0",
     "expo-linking": "^3.2.2",
+    "expo-random": "~12.3.0",
+    "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
+    "expo-system-ui": "^1.3.0",
+    "expo-updates": "~0.14.6",
+    "expo-web-browser": "~11.0.0",
     "formik": "^2.2.9",
     "link": "^1.5.1",
     "react": "18.0.0",
@@ -41,9 +46,7 @@
     "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
-    "yup": "^0.32.11",
-    "expo-random": "~12.3.0",
-    "expo-updates": "~0.14.6"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
