--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native": "0.69.6",
     "react-native-checkbox": "^2.0.0",
     "react-native-loading-spinner-overlay": "^3.0.1",
+    "react-native-paper": "^5.0.0-rc.8",
     "react-native-restart": "^0.0.24",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
