--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-firebase/app": "^15.7.0",
     "@react-native-firebase/dynamic-links": "^15.7.0",
     "@react-native-google-signin/google-signin": "^8.0.1",
+    "@react-native-material/core": "^1.3.7",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
@@ -38,6 +39,7 @@
     "react-native-checkbox": "^2.0.0",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-paper": "^5.0.0-rc.8",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-restart": "^0.0.24",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
