--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "@expo/webpack-config": "^0.17.0",
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-community/google-signin": "^5.0.0",
-    "@react-native-google-signin/google-signin": "^8.0.1",
     "@react-native-firebase/app": "^15.7.0",
     "@react-native-firebase/dynamic-links": "^15.7.0",
+    "@react-native-google-signin/google-signin": "^8.0.1",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
@@ -24,13 +24,19 @@
     "expo-auth-session": "^3.7.1",
     "expo-google-sign-in": "^11.0.0",
     "expo-linking": "^3.2.2",
+    "expo-random": "~12.3.0",
+    "expo-speech": "~10.3.0",
     "expo-status-bar": "~1.4.0",
+    "expo-updates": "~0.14.6",
     "formik": "^2.2.9",
+    "install": "^0.13.0",
     "link": "^1.5.1",
+    "npx": "^10.2.2",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-checkbox": "^2.0.0",
+    "react-native-flip-card-plus": "^2.0.0",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-restart": "^0.0.24",
     "react-native-safe-area-context": "4.3.1",
@@ -41,9 +47,7 @@
     "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
-    "yup": "^0.32.11",
-    "expo-random": "~12.3.0",
-    "expo-updates": "~0.14.6"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
