--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "expo": "~46.0.13",
     "expo-auth-session": "^3.7.1",
     "expo-dev-client": "^1.3.1",
+    "expo-file-system": "^14.1.0",
     "expo-google-sign-in": "^11.0.0",
+    "expo-image-picker": "~13.3.1",
     "expo-linking": "^3.2.2",
     "expo-random": "~12.3.0",
     "expo-splash-screen": "~0.16.2",
@@ -56,8 +58,7 @@
     "react-redux": "^8.0.4",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
-    "yup": "^0.32.11",
-    "expo-image-picker": "~13.3.1"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -79,9 +80,9 @@
     "plugins": [
       "@react-native-google-signin/google-signin",
       "expo-image-picker",
-        {
-          "photosPermission": "The app accesses your photos to let you share them with your friends."
-        }
+      {
+        "photosPermission": "The app accesses your photos to let you share them with your friends."
+      }
     ]
   }
 }
