--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^0.17.0",
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-community/google-signin": "^5.0.0",
@@ -23,14 +24,16 @@
     "dotenv": "^16.0.3",
     "eas-cli": "^2.4.1",
     "expo": "~46.0.13",
+    "expo-app-loading": "^2.1.0",
     "expo-auth-session": "^3.7.1",
     "expo-dev-client": "^1.3.1",
     "expo-file-system": "^14.1.0",
+    "expo-font": "^10.2.1",
     "expo-google-sign-in": "^11.0.0",
     "expo-image-picker": "~13.3.1",
     "expo-linking": "^3.2.2",
     "expo-random": "~12.3.0",
-    "expo-splash-screen": "~0.16.2",
+    "expo-splash-screen": "^0.16.2",
     "expo-status-bar": "~1.4.0",
     "expo-system-ui": "^1.3.0",
     "expo-updates": "~0.14.6",
@@ -71,6 +74,10 @@
   },
   "private": true,
   "expo": {
+    "assetBundlePatterns": [
+      "assets/snd/*.mp3",
+      "assets/fonts/*.ttf"
+    ],
     "android": {
       "googleServicesFile": "./google-services.json"
     },
