--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@expo/webpack-config": "^0.17.0",
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-community/google-signin": "^5.0.0",
-    "@react-native-firebase/app": "^15.7.0",
+    "@react-native-firebase/app": "~15.4.0",
     "@react-native-firebase/dynamic-links": "^15.7.0",
     "@react-native-google-signin/google-signin": "^8.0.1",
     "@react-navigation/bottom-tabs": "^6.4.0",
@@ -29,7 +29,7 @@
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "expo-system-ui": "^1.3.0",
-    "expo-updates": "~0.14.6",
+    "expo-updates": "~0.14.7",
     "expo-web-browser": "~11.0.0",
     "formik": "^2.2.9",
     "install": "^0.13.0",
