--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@expo/webpack-config": "^0.17.0",
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-community/google-signin": "^5.0.0",
-    "@react-native-firebase/app": "^15.7.0",
+    "@react-native-firebase/app": "~15.7.0",
     "@react-native-firebase/dynamic-links": "^15.7.0",
     "@react-native-google-signin/google-signin": "^8.0.1",
     "@react-native-material/core": "^1.3.7",
@@ -36,7 +36,7 @@
     "expo-speech": "~10.3.0",
     "expo-status-bar": "~1.4.0",
     "expo-system-ui": "^1.3.0",
-    "expo-updates": "~0.14.6",
+    "expo-updates": "~0.14.7",
     "expo-web-browser": "~11.0.0",
     "formik": "^2.2.9",
     "install": "^0.13.0",
