--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^0.17.0",
     "@react-native-async-storage/async-storage": "^1.17.10",
+    "@react-native-clipboard/clipboard": "^1.11.1",
     "@react-native-community/google-signin": "^5.0.0",
     "@react-native-firebase/app": "~15.7.0",
     "@react-native-firebase/dynamic-links": "^15.7.0",
@@ -26,6 +27,7 @@
     "expo": "~46.0.13",
     "expo-app-loading": "^2.1.0",
     "expo-auth-session": "^3.7.1",
+    "expo-clipboard": "~3.1.0",
     "expo-dev-client": "^1.3.1",
     "expo-file-system": "^14.1.0",
     "expo-font": "^10.2.1",
