--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-checkbox": "^2.0.0",
+    "react-native-countdown-component": "^2.7.1",
     "react-native-dropdown-picker": "^5.4.2",
     "react-native-flip-card-plus": "^2.0.0",
     "react-native-image-picker": "^4.10.0",
