--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "expo-google-sign-in": "^11.0.0",
     "expo-image-picker": "~13.3.1",
     "expo-linking": "^3.2.2",
+    "expo-notifications": "~0.16.1",
+    "expo-permissions": "^14.0.0",
     "expo-random": "~12.3.0",
     "expo-speech": "~10.3.0",
     "expo-status-bar": "~1.4.0",
@@ -43,6 +45,7 @@
     "formik": "^2.2.9",
     "install": "^0.13.0",
     "link": "^1.5.1",
+    "native-notify": "^3.0.2",
     "npx": "^10.2.2",
     "react": "18.0.0",
     "react-dom": "18.0.0",
@@ -68,7 +71,9 @@
     "react-redux": "^8.0.4",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
-    "yup": "^0.32.11"
+    "socket.io-client": "^4.5.4",
+    "yup": "^0.32.11",
+    "expo-device": "~4.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
