--- a/package.json
+++ b/package.json
@@ -16,19 +16,17 @@
     "@react-native-firebase/app": "~15.7.0",
     "@react-native-firebase/dynamic-links": "^15.7.0",
     "@react-native-google-signin/google-signin": "^8.0.1",
-    "@react-native-material/core": "^1.3.7",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
     "@reduxjs/toolkit": "^1.9.0",
     "axios": "^0.27.2",
-    "dotenv": "^16.0.3",
-    "eas-cli": "^2.4.1",
     "expo": "~46.0.13",
     "expo-app-loading": "^2.1.0",
     "expo-auth-session": "^3.7.1",
     "expo-clipboard": "~3.1.0",
     "expo-dev-client": "^1.3.1",
+    "expo-device": "~4.3.0",
     "expo-file-system": "^14.1.0",
     "expo-font": "^10.2.1",
     "expo-google-sign-in": "^11.0.0",
@@ -41,17 +39,13 @@
     "expo-status-bar": "~1.4.0",
     "expo-system-ui": "^1.3.0",
     "expo-updates": "~0.14.7",
-    "expo-web-browser": "~11.0.0",
     "formik": "^2.2.9",
     "immer": "^9.0.16",
-    "install": "^0.13.0",
     "link": "^1.5.1",
     "native-notify": "^3.0.2",
-    "npx": "^10.2.2",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
-    "react-native-checkbox": "^2.0.0",
     "react-native-countdown-component": "^2.7.1",
     "react-native-dropdown-picker": "^5.4.2",
     "react-native-flip-card-plus": "^2.0.0",
@@ -67,15 +61,11 @@
     "react-native-svg-transformer": "^1.0.0",
     "react-native-switch-selector": "^2.2.1",
     "react-native-tab-view": "^3.1.1",
-    "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.7",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
-    "socket.io-client": "^4.5.4",
-    "yup": "^0.32.11",
-    "expo-device": "~4.3.0"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
