--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-native-svg-transformer": "^1.0.0",
     "react-native-switch-selector": "^2.2.1",
     "react-native-tab-view": "^3.1.1",
+    "react-native-toast-message": "^2.1.5",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0",
