--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-native-countdown-component": "^2.7.1",
     "react-native-dropdown-picker": "^5.4.2",
     "react-native-flip-card-plus": "^2.0.0",
+    "react-native-image-crop-picker": "^0.39.0",
     "react-native-image-picker": "^4.10.0",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-paper": "^5.0.0-rc.8",
