--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "formik": "^2.2.9",
     "immer": "^9.0.16",
     "link": "^1.5.1",
+    "native-base": "^3.4.25",
     "native-notify": "^3.0.2",
     "react": "18.0.0",
     "react-dom": "18.0.0",
@@ -50,7 +51,7 @@
     "react-native-dropdown-picker": "^5.4.2",
     "react-native-flip-card-plus": "^2.0.0",
     "react-native-image-crop-picker": "^0.39.0",
-    "react-native-image-picker": "^4.10.0",
+    "react-native-image-picker": "^4.10.2",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-paper": "^5.0.0-rc.8",
     "react-native-responsive-screen": "^1.4.2",
