--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-auto-scrolling": "^3.0.2",
     "react-native-countdown-component": "^2.7.1",
     "react-native-dropdown-picker": "^5.4.2",
     "react-native-flip-card-plus": "^2.0.0",
