--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-native-segmented-control-tab": "^4.0.0",
     "react-native-svg": "12.3.0",
     "react-native-svg-transformer": "^1.0.0",
+    "react-native-swipe-list-view": "^3.2.9",
     "react-native-switch-selector": "^2.2.1",
     "react-native-tab-view": "^3.1.1",
     "react-native-toast-message": "^2.1.5",
